--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
   
     <div class="col-md-6">
       <div class="img">
-        <img  class="img-fluid" src="image/Mask Group.png">
+        <img  class="img-fluid" src="/image/Mask Group.png">
         </div>
 
     </div>
